--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Randori interop lib for Twitter Bootstrap
+Twitter Bootstrap interop library for Randori ( http://randoriframework.com/ )
 
 see: http://pieterwillaert.github.io/ for an example
